added less than/greater than move in filter, email check, subscriber status

--- a/app/assets/stylesheets/smartrent/admin/style.css
+++ b/app/assets/stylesheets/smartrent/admin/style.css
@@ -56,3 +56,11 @@
 .paging-info .pagination {
   overflow: hidden;
 }
+
+.balances th a {
+  color: #5f5d5b;
+}
+
+.balances .current {
+  color: #7ccddc;
+}
