--- a/app/views/smartrent/admin/balances/_filter_form.html.erb
+++ b/app/views/smartrent/admin/balances/_filter_form.html.erb
@@ -16,6 +16,15 @@
         {:include_blank => "--Select Status--", :class => "form-control"} %>
     </div>
     
+    <div class="form-group date-field">
+      Move-In greater than or equal to
+      <%= text_field_tag :move_in_min, params[:move_in_min], :class => "form-control", :placeholder => "Move In" %>
+    </div>
+    <div class="form-group date-field">
+      Move-In less than or equal to
+      <%= text_field_tag :move_in_max, params[:move_in_max], :class => "form-control", :placeholder => "Move In" %>
+    </div>
+    
     <div class="form-group">
       <%= number_field_tag :balance_min, params[:balance_min], :class => "form-control", :placeholder => "Balance Min" %>
     </div>
