--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -25,6 +25,6 @@
       choose to participate in SmartRent or not.
       <%= link_to "Click here to learn more.", faq_path  %>
     </div>
-    <%= render partial: "properties_slider" %>
+    <%= render partial: "homes_slider" %>
   </div>
 </section>
