--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -1,3 +1,14 @@
+<% if @home.updated_by == "xml_feed" %>
+  <div class="well well-sm">
+    This home is updated by BHI XML feed, the changes you make here will be overridden by the feed
+    <br>
+    <small>
+      You can edit following fields:
+      Subtitle, Home Page Description, Search Page Description, Image Description, Position
+    </small>
+  </div>
+<% end %>
+
 <%= form_for([:admin, @home], :html => {:class => "form-horizontal"}) do |f| %>
   <%= render "layouts/error_messages", :target => @home %>
   <fieldset>
@@ -6,6 +17,14 @@
         <%= f.label :title, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
           <%= f.text_field :title, :class => "form-control" %>
+        </div>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :subtitle, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :subtitle, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -61,7 +80,7 @@
       <div class="form-group">
         <%= f.label :home_page_desc, "Home Page Description", :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :home_page_desc, :class => "form-control" %>
+          <%= f.text_area :home_page_desc, :class => "form-control", :rows => 8 %>
         </div>
       </div>
     </div>
@@ -122,6 +141,14 @@
       <%= f.label :position, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
         <%= f.number_field :position, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :is_visible, :class => "col-md-4 control-label" %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :is_visible %> Yes
+        </div>
       </div>
     </div>
   
