--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -1,3 +1,14 @@
+<% if @home.updated_by == "xml_feed" %>
+  <div class="well well-sm">
+    This more home is updated by BHI XML feed, the changes you make here will be overridden by the feed
+    <br>
+    <small>
+      You can edit following fields:
+      Position, Featured
+    </small>
+  </div>
+<% end %>
+
 <%= form_for([:admin, @home, @more_home], html: {:class => "form-horizontal"}) do |f| %>
   <%= render "layouts/error_messages", :target => @more_home %>
   <fieldset>
@@ -65,6 +76,14 @@
       <%= f.label :position, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
         <%= f.number_field :position, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :is_visible, :class => "col-md-4 control-label" %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :is_visible %> Yes
+        </div>
       </div>
     </div>
     <div class="form-group">
