bhi import: don't override slider image, description. Increase home details font size

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -1216,6 +1216,10 @@ label{
   font-size:.75em;
 }
 
+.propDetails .details .homes .homesTable {
+  font-size: 0.85em;
+}
+
 .propDetails .details .featuredHome .homesTable tr,
 .propDetails .details .homes .homesTable tr{
 }
