--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -4,7 +4,7 @@
     <br>
     <small>
       You can edit following fields:
-      Subtitle, Home Page Description, Search Page Description, Image Description, Position
+      Subtitle, Home Page Description, Search Page Description, Description, Image, Image Description, Position
     </small>
   </div>
 <% end %>
