home details css tweak

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -2281,4 +2281,9 @@ label{
 }
 .fpImageHolder .homeFPImages {
   display: none;
+  max-width: 600px;
+}
+
+.featuredHome {
+  max-width: 600px; 
 }
