--- a/app/views/smartrent/homes/show.html.erb
+++ b/app/views/smartrent/homes/show.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
   <div class="propDetails clearfix">
     <div class="propPhoto">
-      <%= image_tag @home.image %>
+      <%= image_tag @home.image(:desc_page) %>
       <div>
         <%= @home.image_description %>
       </div>
