--- a/app/views/smartrent/homes/index.html.erb
+++ b/app/views/smartrent/homes/index.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: "layout" do %>
 <section class="wrapper clearfix">
-  <div id="contactRight" class="fl-r">
+  <div id="contactRight" class="fl-r home-listing">
     <p>SmartRent dollars earned while leasing one of our Bozzuto-managed apartments may be used to purchase any of these great homes.</p>
     <div class="toggle clearfix">
       <div id="listResults" class="item search-item listOn">
