test accounts tool https://www.dropbox.com/s/uxyoc67ffqo2o8n/Screenshot%202016-04-01%2017.47.30.png?dl=0, updated sliders width on the member statement page

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -1690,7 +1690,7 @@ label{
   font-weight:bold;
   text-transform:uppercase;
   color:#b1b1b1;
-  max-width:605px;
+/*  max-width:605px;*/
 }
 
 .member .memberStatementLeft .saveSubTitle{
@@ -1918,6 +1918,36 @@ label{
 
 .home-listing .info {
   width: 41% !important;
+}
+
+
+/* member slider */
+.member #contentWrapper #slides {
+  width:676px;
+}
+.member #contentWrapper #slides .slides_container {
+  width:675px;
+  height:187px;
+}
+.member #slides .threeWide{
+  width:679px;
+}
+.member #slides .threeWide .propertySlide{
+  width:218px;
+  margin:0 0 0 12px;
+  height:187px;
+}
+
+.member #slides .threeWide .propertySlide:first-child{
+  margin:0;
+}
+
+.member #slides .threeWide .propertySlide img{
+  width:218px;
+}
+
+.member #slides .threeWide .propertySlide .caption{
+  width: 194px;
 }
 
 
