ssl mixed content issue fix (make sure all images use https)

--- a/app/views/layouts/smartrent/application.html.erb
+++ b/app/views/layouts/smartrent/application.html.erb
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "smartrent/application", media: "all" %>
     <%= javascript_include_tag "smartrent/application" %>
-    <%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true" %>
+    <%= javascript_include_tag "//maps.google.com/maps/api/js?sensor=true" %>
     <%= csrf_meta_tags %>
-    <link rel="canonical" href="http://www.bozzutosmartrent.com/">
+    <link rel="canonical" href="http://bozzutosmartrent.com/">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -15,7 +15,7 @@
     <meta name="description" content="Earn credits towards a new Bozzuto Home when you live in a Bozzuto SmartRent apartment community. Here&#39;s what you need to know.">
     <meta property="og:title" content="Welcome to SmartRent | Bozzuto&#39;s SmartRent Program | SmartRent Bozzuto">
     <meta property="og:description" content="Earn credits towards a new Bozzuto Home when you live in a Bozzuto SmartRent apartment community. Here&#39;s what you need to know.">
-    <meta property="og:url" content="http://www.bozzutosmartrent.com/">
+    <meta property="og:url" content="http://bozzutosmartrent.com/">
     <meta property="og:site_name" content="Smartrent">
   </head>
   <body>
