--- a/app/views/smartrent/admin/test_accounts/destroy.js.erb
+++ b/app/views/smartrent/admin/test_accounts/destroy.js.erb
@@ -4,6 +4,6 @@
 	$('#test-accounts tr[data-id=<%= @test_account.id %>]').remove();
 	
 <% else %>
-  msgbox("<%= j @test_account.errors.full_messages %>", "danger");
+  msgbox("<%= j @test_account.errors.full_messages.join("; ") %>", "danger");
   
 <% end %>
