--- a/app/views/smartrent/admin/test_accounts/index.html.erb
+++ b/app/views/smartrent/admin/test_accounts/index.html.erb
@@ -20,7 +20,7 @@
           </small>
         </div>
         <div class="col-md-3">
-          <%= f.label :new_email, "Test Resident Email" %><br>
+          <%= f.label :new_email, "Test Email" %><br>
           <%= f.text_field :new_email, :class => "form-control" %>
           <small class="help-block">
             E.g: schapa@bozzuto.com
@@ -38,6 +38,8 @@
         <tr>
           <th>Resident Id</th>
           <th>Full Name</th>
+          <th>Status</th>
+          <th>Balance</th>
           <th>Real Email</th>
           <th>Test Email</th>
           <th>Activation Date</th>
