--- a/app/views/smartrent/user_mailer/contact_email.html.erb
+++ b/app/views/smartrent/user_mailer/contact_email.html.erb
@@ -1,10 +1,17 @@
-<h1>Message from <%= @contact.name %></h1>
-<p>
-  <b>Name: </b><%= @contact.name %>
-</p>
-<p>
-  <b>Email: </b><%= @contact.email %>
-</p>
-<p>
-  <b>Message: </b><%= @contact.message %>
-</p>
+<html>
+  <head>
+    <title>New Message</title>
+  </head>
+  <body>
+    <h1>Message from <%= @contact.name %></h1>
+    <p>
+      <b>Name: </b><%= @contact.name %>
+    </p>
+    <p>
+      <b>Email: </b><%= @contact.email %>
+    </p>
+    <p>
+      <b>Message: </b><%= @contact.message %>
+    </p>
+  </body>
+</html>
